# Pico-Core

./: CMakeLists.txt  README.md
pulse_width_modulator/: CMakeLists.txt  pulse_width_modulator.cpp  pulse_width_modulator.h
pulse_width_modulator/test/: CMakeLists.txt  README.md  main.cpp
simple_test/: CMakeLists.txt  simple_test.cpp  simple_test.h
simple_test/test/: CMakeLists.txt  main.cpp
uart/: CMakeLists.txt
uart/proof_of_concept/: CMakeLists.txt  main.cpp
